Fixed header image spacing and scrolling

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,63 +75,71 @@ $GreySoftCharcoal: #3F4044;
   // z-index: -3;
   width:100%;
   // height:100%;
+}
 
-  .image-header-bleed {
-    // @media #{$small-only} {
-    //   height: 300px;
-    // }
-    // 
-    width: 100%;
-  }
+.image-header-bleed {
+  // position: fixed;
+  // top: 0;
+  // z-index: -1;
+  // width: 100%;
+  // height: 300px;
+  // background-color:$GreyCharcoal;
+  // opacity: 1;
+  // opacity: 0.4;
+}
+@media #{$medium-up} {
   #header-image {
-    // To use spans
-    display: inline-block;
-    height: 450px;
-    width: 100%;
-    font-size: 0;
-    line-height: 0;
-    vertical-align: middle;
-    background-size: 100%;
-    // background-position: 50% 50%;
-    background-repeat: no-repeat;
-    #image-inner {
-      // padding-top: 450px;
-      padding-top: 66.71%; /* height/width of image */
-      display: block;
-      height: 0;
-    }
-  }
-  @media #{$small-only} {
-    #header-image {
-    // To use spans
-    display: inline-block;
-    height: 300px;
-    width: 100%;
-    font-size: 0;
-    line-height: 0;
-    vertical-align: middle;
-    background-size: 100%;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    }
-    #image-inner {
-      // padding-top: 450px;
-      padding-top: 66.71%; /* height/width of image */
-      display: block;
-      height: 0;
-    }
+  background-position: center;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 450px;
+  // z-index: -2;
+  visibility: visible;
   }
   .image-overlay {
-    // this should be be overlay over the image, semi-transparent, and blurs when scrolled down
-    // position: fixed;
-    top: 0;
-    // z-index: -3;
-    width:100%;
-    min-height: 350px;
-    max-height: 450px;
+    height: 450px;
     background-color:$GreyCharcoal;
     opacity: 0.4;
   }
+}
+@media #{$small-only} {
+  #header-image {
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    // z-index: -2;
+    height: 300px;
+    visibility: visible;
+  }
+  .image-overlay {
+    height: 300px;
+    background-color:$GreyCharcoal;
+    opacity: 0.4;
+  }
+}
+
+
+
+  // .image-overlay {
+  //   // this should be be overlay over the image, semi-transparent, and blurs when scrolled down
+  //   // position: fixed;
+  //   // top: 0;
+  //   // z-index: -3;
+  //   height: 300px;
+  //   // width:100%;
+  //   // min-height: 350px;
+  //   // max-height: 450px;
+  //   background-color:$GreyCharcoal;
+  //   opacity: 0.4;
+  // }
   // .overflow-buffer {
   //   position: fixed;
   //   z-index: -2;
@@ -140,34 +148,7 @@ $GreySoftCharcoal: #3F4044;
   //   width:100%;
   //   background-color: $PageBackground;
   // }
-  // .header-image {
-  //   // position: fixed;
-  //   // top: 0;
-  //   // z-index: -5;
-  //   // width:100%;
-  //   // height:100%;
-  //   // min-height: 300px;
-  //   // max-height: 450px;
-  //   overflow:hidden;
-  // }
-}
-
-
-
-// used when trying to make header image responsive, requires image to be in CSS background-image, which cannot be dynamically set
-// #image {
-//   width: 100%;
-//   display: inline-block;
-//   vertical-align: middle;
-//   font: 0/0 serif;
-//   text-shadow: none;
-//   color: transparent;
-//   background-size: 100%;
-//   background-position: 50% 50%;
-//   background-repeat: no-repeat;
-//   // background-image: url(http://31.media.tumblr.com/5d586f521b11de846229fa3cce2fc413/tumblr_myp9enmO9z1st5lhmo1_1280.jpg); 
 // }
-
 
 
 
